# sanky

./: .gitignore  README.rst  pyproject.toml
sanky/: cli.py  context.py  dircontext.py  fix.py  mustack.py  stack.py  tasks.py
tests/: test_sanky.py
tests/_deploy/: docker-compose.yml  new.yml
tests/_deploy/configs/: .gitignore  special.users
tests/_deploy/secrets/: web.users
